--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,12 @@
 .m-r-0{
     margin-right: 0 !important;
 }
+.m-b-0{
+    margin-bottom: 0 !important;
+}
+.m-b-15{
+    margin-bottom: 15px;
+}
 /*header*/
 ul.sidebar{
     margin: 0;
@@ -15,13 +21,61 @@ ul.sidebar li{
 }
 .bd-sidebar{
     position: sticky;
-    background-color: #fff;
+    background-color: #f4f4f4;
     top: 4rem;
     height: 100vh;
     border-right: 1px solid rgba(0,0,0,.1);
+    padding-top: 2rem;
+}
+ul.sidebar-menu li a{
+    color: #000;
+}
+ul.sidebar-menu li a i{
+    padding-right: 15px;
+}
+.col-profile-img img{
+    width: 100%;
+}
+.col-profile-info p{
+    font-size: 
 }
 /*content*/
 .bd-content{
-    padding-left: 3rem !important;
+    padding: 30px 30px 0 30px;
+}
+ul.surveyor-menu{
+  margin: 0;
+  padding: 0;
+}
+ul.surveyor-menu li{
+    display: inline-block;
+    list-style-type: none;
+    padding: 15px;
+    font-size: 18px;
+    font-weight: bold;
+    background-color: #f4f4f4;
+    width: 240px;
+    margin-left: 10px;
+    text-align: center;
+}
+ul.surveyor-menu li:first-child{
+    margin-left: 0;
+}
+ul.surveyor-menu li a{
+    display: block;
+    color: #000;
+}
+ul.surveyor-menu li a p{
+    margin-bottom: 0;
+}
+ul.surveyor-menu li:hover{
+    background-color: #03A9F4;
+}
+ul.surveyor-menu li:hover a{
+    color: #fff;
+    text-decoration: none;
+}
+ul.surveyor-menu li a img{
+    margin: 15px 0;
 }
 
