--- a/template/header.html
+++ b/template/header.html
@@ -1,10 +1,7 @@
-<nav class="navbar navbar-light bg-light justify-content-between">
+<nav class="navbar navbar-dark bg-dark justify-content-between">
     <a class="navbar-brand" href="#">SAPU ADMIN </a> 
 
     <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
         <h1>{{mobile}}</h1>
-        
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
     </form>
 </nav>
