--- a/template/header.html
+++ b/template/header.html
@@ -1,7 +1,22 @@
 <nav class="navbar navbar-dark bg-dark justify-content-between">
     <a class="navbar-brand" href="#">SAPU ADMIN </a> 
-
-    <form class="form-inline my-2 my-lg-0">
-        <h1>{{mobile}}</h1>
+    <form class="form-inline my-2 my-lg-0 pull-right col-xl-3 col-md-3 col-lg-3 col-sm-3 justify-content-end">
+        <div class="dropleft profile-dropdown">
+            <a href="javascript:void(0)" class="dropdown-toggle" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <i class="fa fa-user-circle-o" aria-hidden="true"></i> Welcome Admin
+            </a>
+            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                <div class="row col m-l-0 m-r-0">
+                    <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 p-l-0 p-r-0">
+                        <img src="./img/default-user-photo.png" class="rounded-circle w-100"/>
+                    </div>
+                    <div class="col-xl-9 col-lg-9 col-md-9 col-sm-9 profile-info align-self-center">
+                        <p>Prasad W. Gote</p>
+                        <p>9860402800</p>
+                        <p>prasad.gote14321@gmail.com</p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </form>
 </nav>
